swagger maj
